--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 .nav-title
 {
@@ -31,13 +32,25 @@ nav a {
     
 }
 .btn-primary{
-    border-radius: 5px;
+border-radius: 5px;
 background: #FD6E0A;
 font-size: 30px;
 font-weight: 700px;
-
 padding: 18px 35px;
 color: white;
+}
+.header{
+ background-color:bisque;
+}
 
+.banner{
+    padding: 30px 30px 30px 200px;
+    display: flex;
 
 }
+ .banner .profile-pic{
+    width: 500px;
+    
+
+
+ }
