--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,7 +7,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 200px;
+    margin: 0px 100px;
 }
 .nav-title
 {
@@ -41,16 +41,41 @@ color: white;
 }
 .header{
  background-color:bisque;
+ background-image: url('../images/header_bg.png');
+ background-repeat: no-repeat;
+ background-position: bottom right;
 }
 
 .banner{
-    padding: 30px 30px 30px 200px;
+    padding: 30px 30px 0px 200px;
     display: flex;
+    align-items: center;
+     justify-content: space-between; 
 
 }
  .banner .profile-pic{
     width: 500px;
-    
 
-
+ }
+ .banner-greeting{
+    font-size: 45px;
+    color: #474747;
+ }
+ .banner-title{
+    font-size: 85px;
+    font-weight: 700px; 
+     margin-top: 5px;
+ }
+ .banner-content{
+    max-width: 500px;
+ }
+ .about-info-container{
+    display: flex;
+    justify-content: space-aroundS;
+ }
+ .about-info{
+    align-items: center;
+ }
+ main{
+    max-width: 1140px;
  }
