--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,3 +79,23 @@ color: white;
  main{
     max-width: 1140px;
  }
+ .about
+ {  align-content: center;
+    padding: 130px;
+    margin: 130px 0px; 
+    border-radius: 10px;
+    background: #FD6E0A;
+ }
+ .section-title{
+    color: #181818;
+    text-align:center ;
+    font: size 35px; ;
+    font-weight:700 ;
+ }
+ .section-description{
+    
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+                
+ }
