--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,6 +81,10 @@ color: white;
     margin: auto;
     max-width: 1140px;
  }
+  main section{
+   margin: 130px;
+
+  }
  .about
  {  align-content: center;
     padding: 130px;
@@ -107,4 +111,12 @@ color: white;
  
 .skill-container{
    display: flex;
+     gap: 50px;
+
+  
+}
+.skill{ border-radius: 5px;
+   background: #eed4d4;
+   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+   padding: 30px;
 }
