--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -120,3 +120,12 @@ color: white;
    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
    padding: 30px;
 }
+.resume-container{
+   display: flex;
+    gap: 70px
+    ;
+}
+.download-cv{
+   text-align: center;
+   margin: 50px;
+}
